--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,8 @@ footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
-
+site-css:
+  - "/assets/css/custom.css"
 #################################################################################
 # --- You probably don't need to touch anything below here for now --- #
 #################################################################################
